# widget-panel

./: .gitignore  brave-toolbar.html  electron-builder.json  main.js  package-lock.json  package.json  preload-brave.js  preload.js  store.js  vite.config.js
native/: .gitignore
native/brave-host/: CMakeLists.txt  brave-host.cpp  build.ps1
native/taskbar-btn/: CMakeLists.txt  build.ps1  hook.cpp  main.cpp
renderer/: App.jsx  index.html
